--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +26,34 @@
         android:theme="@style/Theme.LogiHubApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainPage"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.UpdateTruckPage"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.TruckPage"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.InvoicePage"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.InvoicesPage"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.TrucksPage"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.UpdateProfile"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.Profile"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.Register"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +61,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
