--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,34 +22,34 @@
         android:theme="@style/Theme.LogiHubApp"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.MainPage"
+            android:name=".ui.activity.general.MainPage"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.UpdateTruckPage"
+            android:name=".ui.activity.truck.UpdateTruckPage"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.TruckPage"
+            android:name=".ui.activity.truck.TruckPage"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.InvoicePage"
+            android:name=".ui.activity.invoice.InvoicePage"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.InvoicesPage"
+            android:name=".ui.activity.invoice.InvoicesPage"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.TrucksPage"
+            android:name=".ui.activity.truck.TrucksPage"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.UpdateProfile"
+            android:name=".ui.activity.profile.UpdateProfile"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.Profile"
+            android:name=".ui.activity.profile.Profile"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.Register"
+            android:name=".ui.activity.general.Register"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.Login"
+            android:name=".ui.activity.general.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
